@@ -3,6 +3,9 @@
 
 Version 8.0.13
 
+  - Fix for Bug#87534 (26730196), UNION ALL query fails when useServerPrepStmts=true on database connection.
+    Test case only. Base bug fixed in MySQL 5.7.22.
+
   - Fix for Bug#89948 (27658489), Batched statements are not committed for useLocalTransactionState=true.
 
   - Fix for BUG#22305979, WRONG RECORD UPDATED IF SENDFRACTIONALSECONDS=FALSE AND SMT IS SCROLLABLE.
